--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </ul>
 </div> -->
 
-<script src="src/js/prototype.js"></script>
+<script src="src/js/bubbling-capturing.js"></script>
 
 </body>
 </html>
